--- a/app/assets/stylesheets/1 - home.css.scss
+++ b/app/assets/stylesheets/1 - home.css.scss
@@ -29,6 +29,15 @@
 	}
 }
 
+@media screen and (max-width: $phone) {
+  .comic {
+  max-height: 430px;
+  max-width:  430px;
+  img {
+    width:    100%;
+  }
+}
+}
 
 
 
@@ -48,8 +57,7 @@
 }
 
 .mobile-comicnav {
-  position: relative;
-  bottom:   20px;
+
 }
 
 /*------------------- 1-3-2   Comic Nav Icons - General Styles          */
@@ -135,12 +143,12 @@
 .social-slide {
   border-top-left-radius:  1em;
   border-top-right-radius: 1em;
-  bottom:        -11.5em;
+  bottom:        -12em;
   left: -.03em;
   padding-bottom: 1em;
   position:      absolute;
-  width:   100%;
-  z-index: 10;
+  width:   430px;
+  z-index: 50;
   -webkit-transition-duration: 0.5s;
      -moz-transition-duration: 0.5s;
        -o-transition-duration: 0.5s;
